fix: text align in avatar (#811)

--- a/packages/uicore/src/components/Avatar/Avatar.css
+++ b/packages/uicore/src/components/Avatar/Avatar.css
@@ -15,6 +15,9 @@
   box-sizing: border-box;
   white-space: nowrap;
   text-overflow: ellipsis;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 .contentStyle {
   text-align: center;
